Spacing fixes & others

--- a/assets/css/source/_asistencia_detail.scss
+++ b/assets/css/source/_asistencia_detail.scss
@@ -34,7 +34,11 @@
 
         .banner-navs{
             position: absolute;
-            top: 15%;
+            top: 7.5%;
+
+            @include for-phone-landscape-up{
+                top: 15%;
+            }
 
             span.prev{
                 position: relative;
@@ -63,7 +67,7 @@
 
             .cancel{
                 width: 20px;
-                margin-right: 10px;
+                margin-right: 15px;
 
                 @include for-phone-landscape-up{
                     padding-top: 10px;
@@ -135,7 +139,7 @@
             }
 
             .item-phone{
-                font-family: $primary-bold;
+                font-family: $primary-black;
                 font-size: 20px;
                 color: $darkblue;
 
